Tweak side by side layout of sites. Prevent horizontal scrolling

--- a/client/styles/_site.scss
+++ b/client/styles/_site.scss
@@ -1,11 +1,15 @@
 $site_width: 90%;
-$site_margin: (100% - $site_width) / 2;
+$site_margin: 6%;
 
 @mixin site_position($x) {
     @include transform3d( translate3d($x,0,0) );
+    // left: $x;
+    // top: 0;
 
     &.show_tray {
         @include transform3d( translate3d($x,$played_height,0) );
+        // left: $x;
+        // top: $played_height;
     }
 }
 
@@ -15,23 +19,22 @@ $site_margin: (100% - $site_width) / 2;
 
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     width: 90%;
     height: 100%;
-    overflow: auto;
-
-    // enable inertial scrolling for ios and android
-    -webkit-overflow-scrolling: touch;
+    overflow: hidden;
+    z-index: 1;
 
     @include box-sizing(border-box);
-    @include single-transition(all);
+    @include single-transition(-webkit-transform);
 
-    @include site_position(-100% + $site_margin);
+    @include site_position(0);
 
     &:after {
         content: '';
-        position: absolute;
+        position: fixed;
         width: 100%;
+        height: 100%;
         top: 0;
         left: 0;
         opacity: 1;
@@ -40,7 +43,9 @@ $site_margin: (100% - $site_width) / 2;
     }
 
     &.active {
-        @include site_position($site_margin);
+        z-index: 2;
+        height: inherit;
+        @include site_position(-$site_margin);
 
         &:after {
             // display: none;
@@ -50,6 +55,6 @@ $site_margin: (100% - $site_width) / 2;
     }
 
     &.active ~ & {
-        @include site_position(100% + $site_margin);
+        @include site_position(-$site_margin*2);
     }
 }
