--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -38,10 +38,6 @@ html {
     background: #eee;
 }
 
-body {
-    overflow: hidden;
-}
-
 a {
     text-decoration: none;
 }
